--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -26,6 +27,9 @@ yarn-error.log*
 
 # local env files
 .env
+.env.local
+.env.development
+.env.production
 .env*.local
 .env.development.local
 .env.test.local
